--- a/general/TDLIB/Interface/CRM/Model/crm_customer_person_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_customer_person_newai.ini
@@ -41,6 +41,7 @@ group_filter =
 [add_default]
 tablename = crm_customer
 tabletitle = newcrm_customer
+tablewidth = 100%
 action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 2
@@ -53,6 +54,7 @@ showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 [edit_default]
 tablename = crm_customer
 tabletitle = editcrm_customer
+tablewidth = 100%
 action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
