--- a/general/TDLIB/Interface/XinZhengGuanLi/Model/my_bumen_xingzheng_kaoqinmingxi_newai.ini
+++ b/general/TDLIB/Interface/XinZhengGuanLi/Model/my_bumen_xingzheng_kaoqinmingxi_newai.ini
@@ -3,7 +3,7 @@ tablename = edu_xingzheng_kaoqinmingxi
 tabletitle = listedu_xingzheng_kaoqinmingxi
 tablewidth = 100%
 nullshow = 1
-action_model = export_default:export:x
+action_model = export_default:export:x,exportadv_default:exportadv:x
 row_element = edit:edit_default
 bottom_element = chooseall:chooseall,delete:delete_array
 primarykey = 0
@@ -14,7 +14,7 @@ action_search = 1,2,3,4,5,6,7,8,9,10,11
 group_filter = 1:edu_xueqiexec:1:1,2:department:1:1:hidden,6:dict_weekday:0:0,7:edu_xingzheng_banci:1:1
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = tablefiltercolor:edu_xueqiexec:1:1,tablefiltercolor:department:1:1,input,input,input,tablefiltercolor:dict_weekday:0:0,tablefiltercolor:edu_xingzheng_banci:1:1,input,input,input,input,input,input,input,input,input,input,input,input,input
+showlistfieldfilter = tablefiltercolor:edu_xueqiexec:1:1,tablefiltercolor:department:1:1,input,date,number,tablefiltercolor:dict_weekday:0:0,tablefiltercolor:edu_xingzheng_banci:1:1,input,input,input,input,input,input,input,input,input,input,input,input,input
 
 [init_customer]
 tablename = edu_xingzheng_kaoqinmingxi
@@ -98,5 +98,6 @@ showlistfieldfilter = input,input,input,input,input,input,input,input,input,inpu
 
 [exportadv_default]
 tablename = edu_xingzheng_kaoqinmingxi
-showlistfieldfilter = 
+showlistfieldlist = 1,3,4,5,6,7
+showlistfieldfilter = tablefiltercolor:edu_xueqiexec:1:1,input,date,number,tablefiltercolor:dict_weekday:0:0,tablefiltercolor:edu_xingzheng_banci:1:1
 
