--- a/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/hrms_file_newai.ini
+++ b/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/hrms_file_newai.ini
@@ -87,18 +87,17 @@ primarykey = 0
 uniquekey = 0
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,tdoafile,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input
+showlistfieldfilter = input,input,input,input,input,date,input,input,input,input,input,input,input,input,input,input,tablefilter:dict_education:1:1,input,input,input,input,input,input,input,input,date,input,input,textarea,textarea,tdoafile,picturefile,date,input,date,date,date,date,input,input,date,input,date,input,input,input,input,input,input,date,input,input,input,input,input,input,input,input,textarea,singlefile,textarea,singlefile
 
 [view_customer]
 tablename = hrms_file
 tabletitle = viewhrms_file
-action_submit = cancel:cancel:c,print:print:p,cancel:cancel:c
+action_submit = print:print:p,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
-isrechecked = 0
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input
+showlistfieldfilter = input,input,input,input,input,date,input,input,input,input,input,input,input,input,input,input,tablefilter:dict_education:1:1,input,input,input,input,input,input,input,input,date,input,tablefilter:hrms_zhiwei_status:1:1,textarea,textarea,tdoafile,picturefile,date,input,date,date,date,date,input,input,date,input,date,input,input,input,input,input,input,date,input,input,input,input,input,input,input,input,textarea,singlefile,textarea,singlefile
 
 [exportadv_default]
 tablename = hrms_file
