--- a/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/edu_zhiban_newai.ini
+++ b/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/edu_zhiban_newai.ini
@@ -46,7 +46,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = userdefine:CurrentXueQi,radiofilter:edu_xingzheng_banci:1:1,input,input,input,tablefilter:department:1:1,usertoname,usertoname,usertoname,hidden_field:1:name,system_datetime,input
+showlistfieldfilter = userdefine:CurrentXueQi,radiofilter:edu_xingzheng_banci:1:1,input,input,input,depttoname,usertoname,usertoname,usertoname,hidden_field:1:name,system_datetime,input
 showlistfieldprivate = ,,,,,,,,,,,
 
 [edit_default]
@@ -58,7 +58,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = readonly,input,input,input,input,tablefilter:department:1:1,usertoname,usertoname,usertoname,hidden_field:1:name,system_datetime,input
+showlistfieldfilter = readonly,input,input,input,input,depttoname,usertoname,usertoname,usertoname,hidden_field:1:name,system_datetime,input
 showlistfieldprivate = ,,,,,,,,,,,
 
 [view_default]
