--- a/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/hrms_transfer_newai.ini
+++ b/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/hrms_transfer_newai.ini
@@ -60,7 +60,7 @@ uniquekey = 0
 returnmodel = init_default,hrms_file_newai.php
 showlistfieldlist = 1,2,4,3,14,5,8,9,10,11,12,13,15,16
 showlistnull = null,null,null,notnull,null,notnull,notnull,notnull,notnull,notnull,null,null,null,null
-showlistfieldfilter = tablefilter:hrms_file:1:1,tablefilter:hrms_file:2:2,tablefilter:hrms_file:3:3,date,tablefilter:hrms_transfer_type:1:1,tablefilter:department:1:1,input,input,textarea:45:5,userdefine:jumpuserinfor,textarea:45:5,tablefilter:hrms_zhiwei_status:1:1,userdefine:jumpuserinfor,system_datetime
+showlistfieldfilter = tablefilter:hrms_file:1:1,tablefilter:hrms_file:2:2,tablefilter:hrms_file:3:3,date,tablefilter:hrms_transfer_type:1:1,depttoname,input,input,textarea:45:5,userdefine:jumpuserinfor,textarea:45:5,tablefilter:hrms_zhiwei_status:1:1,userdefine:jumpuserinfor,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,,
 
 [edit_default]
@@ -72,7 +72,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,14,4,5,8,9,10,11,12,13
 showlistnull = notnull,notnull,notnull,null,notnull,notnull,notnull,notnull,notnull,notnull,null,null
-showlistfieldfilter = input,input,date,tablefilter:hrms_transfer_type:1:1,tablefilter:department:1:1,tablefilter:department:1:1,input,input,input,input,input,tablefilter:hrms_zhiwei_status:1:1
+showlistfieldfilter = input,input,date,tablefilter:hrms_transfer_type:1:1,depttoname,depttoname,input,input,input,input,input,tablefilter:hrms_zhiwei_status:1:1
 showlistfieldprivate = ,,,,,,,,,,,
 
 [view_default]
@@ -83,7 +83,7 @@ primarykey = 0
 uniquekey = 0
 showlistfieldlist = 1,2,3,14,4,5,8,9,10,11,12,13
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,input,date,tablefilter:hrms_transfer_type:1:1,tablefilter:department:1:1,tablefilter:department:1:1,input,input,input,input,input,tablefilter:hrms_zhiwei_status:1:1
+showlistfieldfilter = input,input,date,tablefilter:hrms_transfer_type:1:1,depttoname,depttoname,input,input,input,input,input,tablefilter:hrms_zhiwei_status:1:1
 
 [view_customer]
 tablename = hrms_transfer
