--- a/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/hrms_zpjihua_shenpi_newai.ini
+++ b/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/hrms_zpjihua_shenpi_newai.ini
@@ -60,7 +60,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8
 showlistnull = notnull,null,null,null,null,null,null,null
-showlistfieldfilter = tablefilter:department:1:1,textarea:45:5,textarea:45:5,number,date,date1,hidden_field:1:name,system_datetime
+showlistfieldfilter = depttoname,textarea:45:5,textarea:45:5,number,date,date1,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,
 
 [edit_default]
@@ -83,7 +83,7 @@ primarykey = 0
 uniquekey = 0
 showlistfieldlist = 1,2,3,4,5,6,7,8
 showlistnull = null,null,null,null,null,null,null,null
-showlistfieldfilter = tablefilter:department:1:1,textarea:45:5,textarea:45:5,number,date,date1,tablefilter:user:1:2,input
+showlistfieldfilter = depttoname,textarea:45:5,textarea:45:5,number,date,date1,tablefilter:user:1:2,input
 
 [view_customer]
 tablename = hrms_zpjihua
