--- a/trunk/general/TDLIB/Interface/fixedasset/Model/fixedassettiaoku_newai.ini
+++ b/trunk/general/TDLIB/Interface/fixedasset/Model/fixedassettiaoku_newai.ini
@@ -65,7 +65,7 @@ uniquekey = 0
 returnmodel = init_default,fixedasset_newai.php
 showlistfieldlist = 11,10,9,1,2,3,5,4,6,7,8
 showlistnull = null,null,null,null,null,null,notnull,notnull,null,null,null
-showlistfieldfilter = notshow,notshow,notshow,tablefilter:fixedasset:1:1,tablefilter:fixedasset:2:2,tablefilter:department:1:1,userdefine:jumpuserinfor2,tablefilter:department:1:1,input,hidden_field:1:name,system_datetime
+showlistfieldfilter = notshow,notshow,notshow,tablefilter:fixedasset:1:1,tablefilter:fixedasset:2:2,depttoname,userdefine:jumpuserinfor2,depttoname,input,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,
 
 [edit_default]
