--- a/trunk/general/TDLIB/Interface/fixedasset/Model/my_fixedassetbaofei_newai.ini
+++ b/trunk/general/TDLIB/Interface/fixedasset/Model/my_fixedassetbaofei_newai.ini
@@ -57,7 +57,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = tablefilter:fixedasset:1:1,tablefilter:fixedasset:2:2,tablefilter:department:1:1,date,userdefine:jumpuserinfor2,userdefine:jumpuserinfor2,input,hidden_field:1:name,system_datetime,notshow,notshow,notshow
+showlistfieldfilter = tablefilter:fixedasset:1:1,tablefilter:fixedasset:2:2,depttoname,date,userdefine:jumpuserinfor2,userdefine:jumpuserinfor2,input,hidden_field:1:name,system_datetime,notshow,notshow,notshow
 showlistfieldprivate = ,,,,,,,,,,,
 
 [edit_default]
