--- a/general/TDLIB/Interface/XinZhengGuanLi/Model/edu_xingzheng_group_newai.ini
+++ b/general/TDLIB/Interface/XinZhengGuanLi/Model/edu_xingzheng_group_newai.ini
@@ -61,7 +61,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 6,1,2,3,4,5
 showlistnull = null,notnull,notnull,notnull,null,null
-showlistfieldfilter = system_datetime,tablefilter:department:1:1,input,userdefine:banzuchengyuan,textarea:45:5,hidden_field:1:name
+showlistfieldfilter = system_datetime,depttoname,input,userdefine:banzuchengyuan,textarea:45:5,hidden_field:1:name
 showlistfieldprivate = ,,,,,
 
 [edit_default]
@@ -73,7 +73,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4
 showlistnull = notnull,notnull,notnull,null
-showlistfieldfilter = tablefilter:department:1:1,input,userdefine:banzuchengyuan,textarea:45:5
+showlistfieldfilter = depttoname,input,userdefine:banzuchengyuan,textarea:45:5
 showlistfieldprivate = ,,,
 
 [view_default]
