--- a/general/TDLIB/Interface/fixedasset/Model/fixedassetbaofeilist_newai.ini
+++ b/general/TDLIB/Interface/fixedasset/Model/fixedassetbaofeilist_newai.ini
@@ -69,7 +69,7 @@ primarykey = 0
 uniquekey = 0
 showlistfieldlist = 10,2,1,3,9,14,11,12,13,17,7,8,16,4,18,15,19,20,21
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,autoincrement,input,input,input,input,input,input,input,input,tablefilter:department:1:1,input,date,radiofilter:fixedassetgroup:1:1,input,input,input,tablefilter:user:1:2,input
+showlistfieldfilter = input,autoincrement,input,input,input,input,input,input,input,input,depttoname,input,date,radiofilter:fixedassetgroup:1:1,input,input,input,tablefilter:user:1:2,input
 
 [exportadv_default]
 tablename = fixedasset
