--- a/general/TDLIB/Interface/fixedasset/Model/fixedassetout_newai.ini
+++ b/general/TDLIB/Interface/fixedasset/Model/fixedassetout_newai.ini
@@ -65,7 +65,7 @@ uniquekey = 0
 returnmodel = init_default,fixedasset_newai.php
 showlistfieldlist = 11,10,12,1,2,3,4,5,6,7,8,9
 showlistnull = null,null,null,null,null,null,null,notnull,notnull,null,null,null
-showlistfieldfilter = notshow,notshow,notshow,tablefilter:fixedasset:1:1,tablefilter:fixedasset:2:2,tablefilter:department:1:1,radiofilter:fixedassetleibie:1:1,userdefine:jumpuserinfor2,userdefine:jumpuserinfor2,input,hidden_field:1:name,system_datetime
+showlistfieldfilter = notshow,notshow,notshow,tablefilter:fixedasset:1:1,tablefilter:fixedasset:2:2,depttoname,radiofilter:fixedassetleibie:1:1,userdefine:jumpuserinfor2,userdefine:jumpuserinfor2,input,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,
 
 [edit_default]
