--- a/general/TDLIB/Interface/XinZhengGuanLi/Model/hrms_reward_punishment_newai.ini
+++ b/general/TDLIB/Interface/XinZhengGuanLi/Model/hrms_reward_punishment_newai.ini
@@ -61,7 +61,7 @@ uniquekey = 0
 returnmodel = init_default,hrms_file_newai.php
 showlistfieldlist = 3,4,1,5,2,6,7,8,9,10,11,12,13,16,17
 showlistnull = null,null,null,null,null,null,notnull,notnull,null,null,null,null,null,null,null
-showlistfieldfilter = tablefilter:hrms_file:1:1,tablefilter:hrms_file:2:2,radiofilter:hrms_r_p:1:1,tablefilter:hrms_file:3:3,radiofilter:hrms_r_p_status:1:1:³·Ïú,radiofilter:hrms_r_p_name:1:1,input,textarea:45:5,tablefilter:department:1:1,userdefine:jumpuserinfor2,system_datetime,date,textarea,userdefine:jumpuserinfor,system_datetime
+showlistfieldfilter = tablefilter:hrms_file:1:1,tablefilter:hrms_file:2:2,radiofilter:hrms_r_p:1:1,tablefilter:hrms_file:3:3,radiofilter:hrms_r_p_status:1:1:³·Ïú,radiofilter:hrms_r_p_name:1:1,input,textarea:45:5,depttoname,userdefine:jumpuserinfor2,system_datetime,date,textarea,userdefine:jumpuserinfor,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,,,
 
 [edit_default]
@@ -73,7 +73,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = tablefilter:hrms_r_p:1:1,tablefilter:hrms_r_p_status:1:1,input,input,tablefilter:department:1:1,tablefilter:hrms_r_p_name:1:1,input,input,tablefilter:department:1:1,input,date,date,textarea,date,input
+showlistfieldfilter = tablefilter:hrms_r_p:1:1,tablefilter:hrms_r_p_status:1:1,input,input,depttoname,tablefilter:hrms_r_p_name:1:1,input,input,depttoname,input,date,date,textarea,date,input
 showlistfieldprivate = ,,,,,,,,,,,,,,
 
 [view_default]
