--- a/general/TDLIB/Interface/fixedasset/Model/fixedasset_newai.ini
+++ b/general/TDLIB/Interface/fixedasset/Model/fixedasset_newai.ini
@@ -67,7 +67,7 @@ uniquekey = 2
 returnmodel = init_default
 showlistfieldlist = 2,1,3,9,14,11,12,13,7,8,16,17,18,4,15,19,20,21
 showlistnull = notnull,notnull,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,input,input,input,input,notshow,notshow,userdefine:jineinput,select_input:department:1:1,input,date,input,input,radiofilter:fixedassetgroup:1:1,input,input,hidden_field:1:name,system_datetime
+showlistfieldfilter = input,input,input,input,input,notshow,notshow,userdefine:jineinput,depttoname,userdefine:jumpuserinfor2,date,input,input,radiofilter:fixedassetgroup:1:1,input,input,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,,,,,,
 
 [edit_default]
@@ -79,7 +79,7 @@ uniquekey = 2
 returnmodel = init_default
 showlistfieldlist = 2,1,3,9,14,11,12,13,7,8,16,17,18,4,15,19,20,21
 showlistnull = notnull,notnull,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,notnull,notnull
-showlistfieldfilter = input,input,input,input,input,notshow,notshow,userdefine:jineinput,select_input:department:1:1,userdefine:jumpuserinfor2,date,input,input,radiofilter:fixedassetgroup:1:1,input,input,hidden_field:1:name,system_datetime
+showlistfieldfilter = input,input,input,input,input,notshow,notshow,userdefine:jineinput,depttoname,userdefine:jumpuserinfor2,date,input,input,radiofilter:fixedassetgroup:1:1,input,input,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,,,,,,
 
 [view_default]
@@ -90,7 +90,7 @@ primarykey = 0
 uniquekey = 0
 showlistfieldlist = 10,2,1,3,9,14,11,12,13,17,7,8,16,4,18,15,19,20,21
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,autoincrement,input,input,input,input,input,input,input,input,tablefilter:department:1:1,input,date,radiofilter:fixedassetgroup:1:1,input,input,input,tablefilter:user:1:2,input
+showlistfieldfilter = input,autoincrement,input,input,input,input,input,input,input,input,depttoname,input,date,radiofilter:fixedassetgroup:1:1,input,input,input,tablefilter:user:1:2,input
 
 [view_customer]
 tablename = fixedasset
@@ -101,7 +101,7 @@ uniquekey = 0
 isrechecked = 0
 showlistfieldlist = 11,8,1,2,3,4,5,6,7,9,10,13,14,15,16,17,18,19,20,21,22,23,24
 showlistnull = null,null,notnull,notnull,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,input,input,autoincrementdate:GDZC,input,radiofilter:fixedassetgroup:1:1,input,input,tablefilter:department:1:1,input,date,input,input,input,input,input,date,input,input,input,input,hidden_field:1:name,system_datetime
+showlistfieldfilter = input,input,input,autoincrementdate:GDZC,input,radiofilter:fixedassetgroup:1:1,input,input,depttoname,input,date,input,input,input,input,input,date,input,input,input,input,hidden_field:1:name,system_datetime
 
 [exportadv_default]
 tablename = fixedasset
