--- a/general/TDLIB/Interface/XinZhengGuanLi/Model/edu_xingzheng_kaoqinbudeng_newai.ini
+++ b/general/TDLIB/Interface/XinZhengGuanLi/Model/edu_xingzheng_kaoqinbudeng_newai.ini
@@ -5,7 +5,7 @@ tablewidth = 100%
 nullshow = 1
 action_model = export_default:export:x
 row_element = view:view_default,delete:delete_array
-bottom_element = chooseall:chooseall,delete:delete_array
+bottom_element = chooseall:chooseall,delete:delete_array,operation:piliangtongguo
 primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
