--- a/general/TDLIB/Interface/XinZhengGuanLi/Model/edu_xingzheng_qingjia_newai.ini
+++ b/general/TDLIB/Interface/XinZhengGuanLi/Model/edu_xingzheng_qingjia_newai.ini
@@ -3,9 +3,9 @@ tablename = edu_xingzheng_qingjia
 tabletitle = listedu_xingzheng_qingjia
 tablewidth = 100%
 nullshow = 1
-action_model = add_default:new:n,export_default:export:x
-row_element = edit:edit_default,delete:delete_array
-bottom_element = chooseall:chooseall,delete:delete_array
+action_model = export_default:export:x
+row_element = view:view_default,delete:delete_array
+bottom_element = chooseall:chooseall,delete:delete_array,operation:piliangtongguo
 primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
