--- a/general/TDLIB/Interface/XinZhengGuanLi/Model/my_xingzheng_tiaoban_newai.ini
+++ b/general/TDLIB/Interface/XinZhengGuanLi/Model/my_xingzheng_tiaoban_newai.ini
@@ -3,6 +3,8 @@ tablename = edu_xingzheng_tiaoban
 tabletitle = listedu_xingzheng_tiaoban
 tablewidth = 100%
 nullshow = 1
+action_model = add_default:new:n,export_default:export:x,
+row_element = view:view_default
 primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
@@ -11,7 +13,7 @@ action_search = 1,4,5,6,7,8,9,10,11
 group_filter = 1:edu_xueqiexec:1:1,2:department:1:1:hidden,12:user:1:1:hidden,3:user:2:2:hidden,5:edu_xingzheng_banci:1:1,7:edu_xingzheng_banci:1:1,8:edu_boolean:0:1,10:user:2:2
 showlistfieldlist = 1,2,12,3,4,5,6,7,8,9,10,11
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = tablefiltercolor:edu_xueqiexec:1:1,tablefiltercolor:department:1:1,tablefiltercolor:user:1:1,tablefiltercolor:user:2:2,input,tablefiltercolor:edu_xingzheng_banci:1:1,input,tablefiltercolor:edu_xingzheng_banci:1:1,tablefiltercolor:edu_boolean:0:1,userdefine:workflowtodetail,tablefiltercolor:user:2:2,input
+showlistfieldfilter = tablefiltercolor:edu_xueqiexec:1:1,tablefiltercolor:department:1:1,tablefiltercolor:user:1:1,tablefiltercolor:user:2:2,input,tablefiltercolor:edu_xingzheng_banci:1:1,input,tablefiltercolor:edu_xingzheng_banci:1:1,tablefiltercolor:edu_boolean:0:1,userdefine:tiaobanworkflowtodetail,tablefiltercolor:user:2:2,input
 
 [init_customer]
 tablename = edu_xingzheng_tiaoban
