--- a/general/TDLIB/Interface/CRM/Model/crm_contract_person_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_contract_person_newai.ini
@@ -3,7 +3,7 @@ tablename = crm_contract
 tabletitle = listcrm_contract
 tablewidth = 100%
 nullshow = 1
-action_model = add_default:new:n,export_default:export:x,import_default:import:i
+action_model = export_default:export:x,import_default:import:i
 row_element = view:view_default,edit:edit_default,delete:delete_array
 bottom_element = chooseall:chooseall,delete:delete_array,edit:edit_default
 primarykey = 0
@@ -35,7 +35,7 @@ group_filter = 33:user:1:2:hidden
 [import_default]
 tablename = crm_contract
 tabletitle = importcrm_contract
-primarykey = 1,33:userid,34:datetime
+primarykey = 1,2,33:userid,34:datetime
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,32,35,36,37,38,39
 group_filter = 
@@ -46,11 +46,11 @@ tabletitle = newcrm_contract
 action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
-returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,32,33,34,35,36,37,38,39
-showlistnull = notnull,notnull,notnull,notnull,notnull,notnull,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrementdate,tablefilter:crm_customer:2:2,radiofilter:crm_dict_servicetypes:1:1,money,date,date,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,textarea:50:3,radiofilter:edu_boolean:1:1:ÊÇ,textarea:50:3,hidden_field:1:name,system_datetime,input,input,input,input,input
-showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+returnmodel = init_default,crm_customer_person_newai.php
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,32,33,34,35,36,37,38,39
+showlistnull = notnull,notnull,notnull,notnull,notnull,notnull,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = autoincrementdate,tablefilter:crm_customer:2:2,radiofilter:crm_dict_servicetypes:1:1,money,date,date,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,textarea:50:3,textarea:50:3,hidden_field:1:name,system_datetime,input,input,input,input,input
+showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 
 [edit_default]
 tablename = crm_contract
@@ -59,10 +59,10 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,32,35,36,37,38,39
-showlistnull = notnull,notnull,notnull,notnull,notnull,notnull,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrementdate,select_input:crm_customer:2:2,radiofilter:crm_dict_servicetypes:1:1,money,date,date,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,textarea:50:3,radiofilter:edu_boolean:1:1:ÊÇ,textarea:50:3,input,input,input,input,input
-showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,32,35,36,37,38,39
+showlistnull = notnull,notnull,notnull,notnull,notnull,notnull,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = autoincrementdate,readonly,radiofilter:crm_dict_servicetypes:1:1,money,date,date,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,date0,money,textarea:50:3,textarea:50:3,input,input,input,input,input
+showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 
 [view_default]
 tablename = crm_contract
@@ -70,9 +70,9 @@ tabletitle = viewcrm_contract
 action_submit = print:print:p,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,tablefilter:user:1:2,input,input,input,input,input,input
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,30,31,32,33,34,35,36,37,38,39
+showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,input,tablefilter:user:1:2,input,input,input,input,input,input
 
 [exportadv_default]
 tablename = crm_contract
