--- a/general/TDLIB/Interface/CRM/Model/crm_order_person_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_order_person_newai.ini
@@ -3,7 +3,7 @@ tablename = crm_order
 tabletitle = listcrm_order
 tablewidth = 100%
 nullshow = 1
-action_model = add_default:new:n,export_default:export:x,import_default:import:i
+action_model = export_default:export:x,import_default:import:i
 row_element = view:view_default,edit:edit_default,delete:delete_array
 bottom_element = chooseall:chooseall,delete:delete_array,edit:edit_default
 primarykey = 0
@@ -35,7 +35,7 @@ group_filter = 16:user:1:2:hidden
 [import_default]
 tablename = crm_order
 tabletitle = importcrm_order
-primarykey = 1,16:userid,17:datetime
+primarykey = 1,3,16:userid,17:datetime
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,15,18,19,20,21,22
 group_filter = 
@@ -46,11 +46,11 @@ tabletitle = newcrm_order
 action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
-returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22
-showlistnull = notnull,notnull,notnull,notnull,notnull,notnull,notnull,notnull,notnull,notnull,notnull,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrementdate,date,tablefilter:crm_customer:2:2,usertoname,notshow,select_input:crm_product:1:1,notshow,notshow,userdefine:jineinput,notshow,notshow,radiofilter:edu_boolean:1:1:ÊÇ,notshow,notshow,textarea:50:3,hidden_field:1:name,system_datetime,input,input,input,input,input
-showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,,
+returnmodel = init_default,crm_customer_person_newai.php
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,13,14,15,16,17,18,19,20,21,22
+showlistnull = notnull,notnull,notnull,notnull,notnull,notnull,notnull,notnull,notnull,notnull,notnull,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = autoincrementdate,date,tablefilter:crm_customer:2:2,usertoname,notshow,select_input:crm_product:1:1,notshow,notshow,userdefine:jineinput,notshow,notshow,notshow,notshow,textarea:50:3,hidden_field:1:name,system_datetime,input,input,input,input,input
+showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,
 
 [edit_default]
 tablename = crm_order
@@ -59,10 +59,10 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,18,19,20,21,22
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrementdate,date,select_input:crm_customer:2:2,usertoname,notshow,select_input:crm_product:1:1,money,number,notshow,notshow,notshow,radiofilter:edu_boolean:1:1:ÊÇ,notshow,notshow,textarea:50:3,input,input,input,input,input
-showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,13,14,15,18,19,20,21,22
+showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = autoincrementdate,date,readonly,usertoname,notshow,select_input:crm_product:1:1,money,number,notshow,notshow,notshow,notshow,notshow,textarea:50:3,input,input,input,input,input
+showlistfieldprivate = ,,,,,,,,,,,,,,,,,,
 
 [view_default]
 tablename = crm_order
