--- a/general/TDLIB/Interface/CRM/Model/crm_service_person_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_service_person_newai.ini
@@ -3,7 +3,7 @@ tablename = crm_service
 tabletitle = listcrm_service
 tablewidth = 100%
 nullshow = 1
-action_model = add_default:new:n,export_default:export:x,import_default:import:i
+action_model = export_default:export:x,import_default:import:i
 row_element = view:view_default,edit:edit_default,delete:delete_array
 bottom_element = chooseall:chooseall,delete:delete_array,edit:edit_default
 primarykey = 0
@@ -28,7 +28,7 @@ tabletitle = exportcrm_service
 primarykey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,14,18,19,20,21,22
-group_filter = 16:user:1:2:hidden
+group_filter = 1,5,16:user:1:2:hidden
 
 [import_default]
 tablename = crm_service
@@ -44,7 +44,7 @@ tabletitle = newcrm_service
 action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
-returnmodel = init_default
+returnmodel = init_default,crm_customer_person_newai.php
 showlistfieldlist = 1,5,2,3,4,6,7,14,15,16,17,18,19,20,21,22
 showlistnull = null,null,null,null,notnull,null,null,null,null,null,null,null,null,null,null,null
 showlistfieldfilter = autoincrementdate,tablefilter:crm_customer:2:2,radiofilter:crm_dict_servicepharse:1:1:ÐÂµÄ,date,input,input,input,textarea:50:3,tdoafile,hidden_field:1:name,system_datetime,input,input,input,input,input
@@ -59,7 +59,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,5,2,3,4,6,7,14,15,18,19,20,21,22
 showlistnull = null,null,null,null,notnull,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrementdate,tablefilter:crm_customer:2:2,radiofilter:crm_dict_servicepharse:1:1,date,input,input,input,textarea:50:3,tdoafile,input,input,input,input,input
+showlistfieldfilter = autoincrementdate,readonly,radiofilter:crm_dict_servicepharse:1:1,date,input,input,input,textarea:50:3,tdoafile,input,input,input,input,input
 showlistfieldprivate = ,,,,,,,,,,,,,
 
 [view_default]
