--- a/general/TDLIB/Interface/CRM/Model/crm_kaipiao_sq_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_kaipiao_sq_newai.ini
@@ -3,7 +3,7 @@ tablename = crm_kaipiao_sq
 tabletitle = listcrm_kaipiao_sq
 tablewidth = 100%
 nullshow = 1
-action_model = add_default:new:n,export_default:export:x,import_default:import:i
+action_model = add_default:new:n,export_default:export:x,import_default:import:i,exportadv_default:exportadv:x
 row_element = view:view_default,edit:edit_default,delete:delete_array
 bottom_element = chooseall:chooseall,delete:delete_array,edit:edit_default
 primarykey = 0
@@ -56,10 +56,10 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,16,12,17,13,14,15
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrement,usertoname,date,tablefilter:crm_piaoju_type:1:1,tablefilter:crm_yewu_type:1:1,input,userdefine:jumpkehuinfor,textarea,input,usertoname,boolean,date,boolean,date,textarea,hidden_field:1:name,system_datetime
-showlistfieldprivate = ,,,,,,,,,,,,,,,,
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,13,14,15
+showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = autoincrement,usertoname,date,tablefilter:crm_piaoju_type:1:1,tablefilter:crm_yewu_type:1:1,input,userdefine:jumpkehuinfor,textarea,input,usertoname,textarea,hidden_field:1:name,system_datetime
+showlistfieldprivate = ,,,,,,,,,,,,
 
 [view_default]
 tablename = crm_kaipiao_sq
@@ -73,5 +73,6 @@ showlistfieldfilter = autoincrement,input,input,input,input,input,input,input,in
 
 [exportadv_default]
 tablename = crm_kaipiao_sq
-showlistfieldfilter = 
+showlistfieldlist = 11
+showlistfieldfilter = boolean
 
