--- a/general/TDLIB/Interface/CRM/Model/crm_expense_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_expense_newai.ini
@@ -16,7 +16,7 @@ action_search = 1,2,3,4,5,6,7,8,9,10,11,15,16,17,18
 group_filter = 3:crm_customer:1:1,6:crm_dict_expensetypes:1:1,8:edu_boolean:1:1,10:user:2:2
 showlistfieldlist = 12,1,13,14,2,3,4,5,6,7,8,9,10,11,15,16,17,18,19,20,21,22,23
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,autoincrementdate,tablefiltercolor:user:1:2,input,input,tablefiltercolor:crm_customer:2:2,input,date,tablefiltercolor:crm_dict_expensetypes:1:1:交通,money,tablefiltercolor:edu_boolean:1:1:否,input,tablefiltercolor:user:2:2,input,input,tdoafile,tablefiltercolor:user:1:2,input,input,input,input,input,input
+showlistfieldfilter = boolean,autoincrementdate,tablefiltercolor:user:1:2,input,input,tablefiltercolor:crm_customer:2:2,input,date,tablefiltercolor:crm_dict_expensetypes:1:1:交通,money,tablefiltercolor:edu_boolean:1:1:否,input,tablefiltercolor:user:2:2,input,input,tdoafile,tablefiltercolor:user:1:2,input,input,input,input,input,input
 
 [delete_array]
 tablename = crm_expense
@@ -61,7 +61,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 13,14,12,1,3,2,4,5,6,7,8,9,10,11,15,16,19,20,21,22,23
 showlistnull = null,null,null,null,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = notshow,notshow,radiofilter:edu_boolean:1:1:是,autoincrementdate,tablefilter:crm_customer:2:2,input,input,date,radiofilter:crm_dict_expensetypes:1:1,money,radiofilter:edu_boolean:1:1,input,usertoname,input,input,tdoafile,input,input,input,input,input
+showlistfieldfilter = notshow,notshow,boolean,autoincrementdate,tablefilter:crm_customer:2:2,input,input,date,radiofilter:crm_dict_expensetypes:1:1,money,radiofilter:edu_boolean:1:1,input,usertoname,input,input,tdoafile,input,input,input,input,input
 showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,
 
 [view_default]
