--- a/general/TDLIB/Interface/CRM/Model/crm_kaipiao_jlsq_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_kaipiao_jlsq_newai.ini
@@ -13,7 +13,7 @@ pagenums_model = 25
 action_search = 1,2,4,5,6,7,11,12
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,16,12,17,13,14,15
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrement,input,date,tablefiltercolor:crm_piaoju_type:1:1,tablefiltercolor:crm_yewu_type:1:1,input,input,textarea,input,input,boolean,date,boolean,date,textarea,tablefiltercolor:user:1:2,date
+showlistfieldfilter = autoincrement,input,date,tablefiltercolor:crm_piaoju_type:1:1,tablefiltercolor:crm_yewu_type:1:1,input,input,textarea,input,input,boolean,input,boolean,input,textarea,tablefiltercolor:user:1:2,date
 
 [delete_array]
 tablename = crm_kaipiao_sq
@@ -56,9 +56,9 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,16,12,17,13,14,15
+showlistfieldlist = 11,1,2,3,4,5,6,7,8,9,10,12,13,14,15,16,17
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,boolean,date,boolean,date,textarea,hidden_field:1:name,system_datetime
+showlistfieldfilter = boolean,readonly,readonly,readonly,tablefilter:crm_piaoju_type:1:1,tablefilter:crm_yewu_type:1:1,input,readonly,textarea,input,input,boolean,textarea,hidden_field:1:name,system_datetime,nowshow,nowshow
 showlistfieldprivate = ,,,,,,,,,,,,,,,,
 
 [view_default]
