--- a/general/TDLIB/Interface/CRM/Model/crm_yongjin_jlsq_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_yongjin_jlsq_newai.ini
@@ -13,7 +13,7 @@ pagenums_model = 25
 action_search = 1,2,3,4,5,6,7,8,9,10,12,13
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,17,13,18,14,15,16
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrement,input,input,date,tablefiltercolor:crm_suoshufenlei_sq:1:1,input,input,input,input,textarea,input,boolean,date,boolean,date,textarea,tablefiltercolor:user:1:2,date
+showlistfieldfilter = autoincrement,input,input,date,tablefiltercolor:crm_suoshufenlei_sq:1:1,input,input,input,input,textarea,input,boolean,input,boolean,input,textarea,tablefiltercolor:user:1:2,date
 
 [delete_array]
 tablename = crm_yongjin_sq
@@ -56,9 +56,9 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,17,13,18,14,15,16
+showlistfieldlist = 12,1,2,3,4,5,6,7,8,9,10,11,13,17,14,18,15,16
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,boolean,date,boolean,date,textarea,hidden_field:1:name,system_datetime
+showlistfieldfilter = boolean,readonly,readonly,readonly,readonly,tablefilter:crm_suoshufenlei_sq:1:1,usertoname,input,input,textarea,readonly,usertoname,boolean,nowshow,textarea,nowshow,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,,,,,,
 
 [view_default]
