--- a/general/TDLIB/Interface/CRM/Model/crm_qita_sq_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_qita_sq_newai.ini
@@ -46,7 +46,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,10,11,12
-showlistnull = null,null,null,null,null,null,null,null
+showlistnull = notnull,notnull,notnull,notnull,null,null,null,null
 showlistfieldfilter = autoincrement,usertoname,date,textarea,usertoname,textarea,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,
 
@@ -58,7 +58,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,10,11,12
-showlistnull = null,null,null,null,null,null,null,null
+showlistnull = notnull,notnull,notnull,notnull,null,null,null,null
 showlistfieldfilter = autoincrement,usertoname,date,textarea,usertoname,textarea,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,
 
