--- a/general/TDLIB/Interface/CRM/Model/crm_yongjin_sq_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_yongjin_sq_newai.ini
@@ -13,7 +13,7 @@ pagenums_model = 25
 action_search = 1,2,3,4,5,6,7,8,9,10,12,13
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,17,13,18,14,15,16
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrement,input,input,date,tablefiltercolor:crm_suoshufenlei_sq:1:1,input,input,input,input,textarea,input,boolean,date,boolean,date,textarea,tablefiltercolor:user:1:2,date
+showlistfieldfilter = autoincrement,input,input,date,tablefiltercolor:crm_suoshufenlei_sq:1:1,input,userdefine:jumpzhanghuinfor,input,input,textarea,input,boolean,date,boolean,date,textarea,tablefiltercolor:user:1:2,date
 
 [delete_array]
 tablename = crm_yongjin_sq
@@ -45,8 +45,8 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,14,15,16
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrement,input,usertoname,date,tablefilter:crm_suoshufenlei_sq:1:1,input,input,input,textarea,userdefine:jumpkehuinfor,usertoname,textarea,hidden_field:1:name,system_datetime
+showlistnull = notnull,notnull,notnull,notnull,null,notnull,null,null,null,notnull,null,null,null,null
+showlistfieldfilter = autoincrement,input,usertoname,date,tablefilter:crm_suoshufenlei_sq:1:1,input,userdefine:jumpzhanghuinfor,input,textarea,userdefine:jumpkehuinfor,usertoname,textarea,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,,
 
 [edit_default]
@@ -57,8 +57,8 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,14,15,16
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrement,input,usertoname,date,tablefilter:crm_suoshufenlei_sq:1:1,input,input,input,textarea,userdefine:jumpkehuinfor,usertoname,textarea,hidden_field:1:name,system_datetime
+showlistnull = notnull,notnull,notnull,notnull,null,notnull,null,null,null,notnull,null,null,null,null
+showlistfieldfilter = autoincrement,input,usertoname,date,tablefilter:crm_suoshufenlei_sq:1:1,input,userdefine:jumpzhanghuinfor,input,textarea,userdefine:jumpkehuinfor,usertoname,textarea,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,,
 
 [view_default]
