--- a/general/TDLIB/Interface/CRM/Model/crm_kaipiao_bmsq_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_kaipiao_bmsq_newai.ini
@@ -45,7 +45,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,13,14,15
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistnull = notnull,notnull,notnull,null,null,notnull,notnull,null,null,null,null,null,null
 showlistfieldfilter = autoincrement,usertoname,date,tablefilter:crm_piaoju_type:1:1,tablefilter:crm_yewu_type:1:1,input,userdefine:jumpkehuinfor,textarea,input,usertoname,textarea,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,
 
