--- a/general/TDLIB/Interface/CRM/Model/crm_yanchifukuan_bmsq_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_yanchifukuan_bmsq_newai.ini
@@ -45,7 +45,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,18,19,20
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistnull = notnull,notnull,notnull,null,notnull,notnull,null,null,null,notnull,notnull,null,null,null,null,null,null
 showlistfieldfilter = autoincrement,usertoname,date,tablefilter:crm_suoshufenlei_sq:1:1,date,userdefine:jumpkehuinfor,textarea,input,input,date,date,date,textarea,usertoname,textarea,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,,,,,
 
