--- a/general/TDLIB/Interface/TuShuGuanLi/Model/bookssetout_newai.ini
+++ b/general/TDLIB/Interface/TuShuGuanLi/Model/bookssetout_newai.ini
@@ -10,6 +10,8 @@ primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
 pagenums_model = 25
+UserSumFunction = 12
+UserUnitFunction = RMB
 action_search = 1,2,3,4,5,6,7,8,9,10,11,12
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
@@ -58,10 +60,10 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default,booksset_newai.php
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = tablefilter:booksset:1:1,tablefilter:booksset:1:1,depttoname,radiofilter:bookssetoutleibie:1:1,date,userdefine:jumpuserinfor2,userdefine:jumpuserinfor2,textarea,hidden_field:1:name,system_datetime,notshow,notshow,notshow
-showlistfieldprivate = ,,,,,,,,,,,,
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
+showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = tablefilter:booksset:1:1,tablefilter:booksset:1:1,depttoname,radiofilter:bookssetoutleibie:1:1,usertoname,usertoname,textarea,hidden_field:1:name,system_datetime,notshow,notshow,notshow
+showlistfieldprivate = ,,,,,,,,,,,
 
 [edit_default]
 tablename = bookssetout
@@ -73,7 +75,6 @@ returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
 showlistfieldfilter = input,input,input,input,input,input,input,input,input,input,input,input
-
 
 [view_default]
 tablename = bookssetout
