--- a/general/TDLIB/Interface/ZAIXIANKAOSHI/Model/tiku_kaoshi_newai.ini
+++ b/general/TDLIB/Interface/ZAIXIANKAOSHI/Model/tiku_kaoshi_newai.ini
@@ -61,7 +61,7 @@ uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10
 showlistnull = notnull,notnull,null,null,null,null,notnull,notnull,null,null
-showlistfieldfilter = input,tablefilter:tiku_shijuan:1:1,date,jumpbanji,textarea:50:3,textarea:50:3,input,input,textarea:50:3,system_datetime
+showlistfieldfilter = input,tablefilter:tiku_shijuan:1:1,date,jumpbanji,usertonamelist,textarea:50:3,input,input,textarea:50:3,system_datetime
 showlistfieldprivate = ,,,,,,,,,
 
 [edit_default]
